# MREN203_Trover

./: .clang_format  README.md
MREN203_week4activities/: MREN203_week4activities.ino
MREN203_week4activities/trover_controls/src/: main.cpp
src/trover_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/trover_bringup/launch/: simulated_robot.launch.py
src/trover_description/: CMakeLists.txt  package.xml
src/trover_description/launch/: display.launch.py  gazebo.launch.py  test_sensors.launch.py
src/trover_description/rviz/: default.rviz  default_nav.rviz
src/trover_description/urdf/: trover_description.urdf.xacro
src/trover_navigation/: package.xml  setup.cfg  setup.py
src/trover_navigation/config/: controller_server.yaml  nav2_params.yaml  planner_server.yaml
src/trover_navigation/launch/: navigation.launch.py
src/trover_navigation/trover_navigation/: nav2_action_proxy.py
src/trover_slam/: package.xml  setup.cfg  setup.py
src/trover_slam/config/: slam_toolbox.yaml
src/trover_slam/launch/: slam.launch.py
src/trover_state_estimation/: package.xml  setup.cfg  setup.py
src/trover_state_estimation/config/: amcl.yaml  ekf.yaml
src/trover_state_estimation/launch/: global_localization.launch.py  local_localization.launch.py
