<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trover_bringup</name>
  <version>0.0.0</version>
  <description>Co-ordinates the full robot launch</description>
  <maintainer email="noah.ginzburg@gmail.com">noah</maintainer>
  <license>Apache 2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <exec_depend>trover_description</exec_depend>
  <exec_depend>trover_state_estimation</exec_depend>
  <exec_depend>trover_navigation</exec_depend>
  <exec_depend>trover_slam</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
